--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -13,13 +13,21 @@ jobs:
       # コード取得
       - uses: actions/checkout@v3
 
-      # Xcodeのバージョン指定（必要なら修正）
+      # xcodegen をインストール
+      - name: Install xcodegen
+        run: |
+          brew install xcodegen
+
+      # project.yml から Xcode プロジェクトを自動生成
+      - name: Generate Xcode project
+        run: |
+          xcodegen generate --spec project.yml
+
+      # Xcodeのバージョン指定
       - name: Select Xcode
         uses: maxim-lobanov/setup-xcode@v1
         with:
           xcode-version: '16.2.0'
-
-      # CocoaPodsやSwift Package Managerがあればここにステップを追加
 
       # ビルド
       - name: Build .xcarchive
@@ -30,7 +38,7 @@ jobs:
             -configuration Release \
             -archivePath ${{ github.workspace }}/build/BokujoDashCowcome.xcarchive archive
 
-      # IPA書き出し用の設定ファイル（あとで作成します）
+      # IPA書き出し用の設定ファイル
       - name: Export IPA
         run: |
           xcodebuild -exportArchive \
@@ -38,9 +46,9 @@ jobs:
             -exportPath ${{ github.workspace }}/build/ipa \
             -exportOptionsPlist ExportOptions.plist
 
-      # 成果物をアップロード
-      #- name: Upload IPA Artifact
-      #  uses: actions/upload-artifact@v2
-      #  with:
-      #    name: BokujoDashCowcome.ipa
-      #    path: build/ipa/*.ipa
+      # Upload ステップはコメントアウト済み
+      # - name: Upload IPA Artifact
+      #   uses: actions/upload-artifact@v2
+      #   with:
+      #     name: BokujoDashCowcome.ipa
+      #     path: build/ipa/*.ipa
