--- a/project.yml
+++ b/project.yml
@@ -16,3 +16,6 @@ targets:
     sources: [Sources]
     settings:
       PRODUCT_BUNDLE_IDENTIFIER: com.opekku2001.bokujoDashCowcome
+      CODE_SIGNING_ALLOWED: "NO"
+      CODE_SIGNING_REQUIRED: "NO"
+      CODE_SIGN_IDENTITY: ""
